lot of content added but links need to be synced with ml-teaching repo

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -13,35 +13,40 @@ title: "Schedule"
 :::
 
 
-| Lecture # |    Date     | Topic (Slides)                                  | Notebooks |  Reading |
-|:------:|:--------------:|:------------------------------------------------|:---------:|:---------|
-|     0     | 25 Jul| [Pre-requisite quiz released](exams/prereq.qmd){target="_blank"} |           |          |
-|     1     |    6 Aug    | [Introduction and Logistics](https://nipunbatra.github.io/ml-teaching/basics/slides/1-introduction-ml-2025.pdf){target="_blank"}                     |      [Transcription and local LLMs](https://nipunbatra.github.io/ml-teaching/notebooks/transcript.html){target="_blank"}, [Segmentation and Localization](https://nipunbatra.github.io/ml-teaching/notebooks/object-detection-segmentation.html){target="_blank"}, [Prompt to Image](https://nipunbatra.github.io/ml-teaching/notebooks/text_to_image.html){target="_blank"}     |            |
-| 2| 7 Aug| [Convention, Metrics, Classification, Regression](https://nipunbatra.github.io/ml-teaching/basics/slides/accuracy-convention-handout.pdf){target="_blank"}|[Rule based vs ML](https://nipunbatra.github.io/ml-teaching/notebooks/rule-based-vs-ml.html){target="_blank"}, [Confusion Matrix](https://nipunbatra.github.io/ml-teaching/notebooks/confusion-mnist.html){target="_blank"}, [Dummy baselines](https://nipunbatra.github.io/ml-teaching/notebooks/dummy-baselines.html){target="_blank"}||
-| 3| 8 Aug| [Decision Trees 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-trees-handout.pdf){target="_blank"}|[Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/entropy.html){target="_blank"}, [Decision Trees Real Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-output.html){target="_blank"}, [DT Real Input Discrete Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-discrete-output.html){target="_blank"}||
-| 4| 13 Aug| [Decision Trees 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-trees-handout.pdf){target="_blank"}|[Decision Trees + Overfitting, Underfitting](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-real-output.html){target="_blank"}||
-| 5| 14 Aug| [Bias-Variance Trade-off 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/bias-variance.pdf){target="_blank"}, [Cross-Validation](https://nipunbatra.github.io/ml-teaching/supervised/slides/cross-validation-handout.pdf){target="_blank"}|[Tuning Hyperparameters](https://nipunbatra.github.io/ml-teaching/notebooks/hyperparams-experiments.html){target="_blank"}, [Bias-Variance Analysis](https://nipunbatra.github.io/ml-teaching/notebooks/bias-variance.html){target="_blank"}, [Bias-Variance Charts](https://nipunbatra.github.io/ml-teaching/notebooks/bias-variance-charts.html){target="_blank"}||
-| 6| 20 Aug| [Ensemble Learning](https://nipunbatra.github.io/ml-teaching/supervised/slides/ensemble-handout.pdf){target="_blank"} | [Boosting Explanation](https://nipunbatra.github.io/ml-teaching/notebooks/boosting-explanation.html){target="_blank"}, [Ensemble Feature Importance](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-feature-importance.html){target="_blank"}, [Ensemble Representation](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-representation.html){target="_blank"} ||
-| 7| 21 Aug| [Decision Tree Pruning](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-tree-pruning-handout.pdf){target="_blank"}, [Bias-Variance Trade-off 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/bias-variance-2.pdf){target="_blank"} | [Decision Tree Pruning Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/dt-pruning.html){target="_blank"} ||
-| 8| 22 Aug| [Maths for ML](https://nipunbatra.github.io/ml-teaching/maths/slides/mathematical-ml-handout.pdf){target="_blank"}, [Contours & Gradients](https://nipunbatra.github.io/ml-teaching/maths/slides/ml-maths-2-contour-handout.pdf){target="_blank"}, [Decision Tree Time Complexity](https://nipunbatra.github.io/ml-teaching/maths/slides/decision-tree-complexity-handout.pdf){target="_blank"}|[Contour Plots](https://nipunbatra.github.io/ml-teaching/notebooks/contour.html){target="_blank"},[Meshgrid & Contours](https://nipunbatra.github.io/ml-teaching/notebooks/meshgrid.html)||
-| 9| 27 Aug| [Linear Regression 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/linear-regression-handout.pdf){target="_blank"} | [Decision Tree Pruning Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/dt-pruning.html){target="_blank"} ||
-| 10| 28 Aug| [Linear Regression 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/linear-regression-handout.pdf){target="_blank"} | [Geometric Linear Regression](https://nipunbatra.github.io/ml-teaching/notebooks/geometric-linear-regression.html){target="_blank"},[Basis Expansion](https://nipunbatra.github.io/ml-teaching/notebooks/basis.html){target="_blank"},[Basis Expansion 2](https://nipunbatra.github.io/ml-teaching/notebooks/basis2.html){target="_blank"}, [Dummy Variables](https://nipunbatra.github.io/ml-teaching/notebooks/dummy-variables-multi-colinearity.html){target="_blank"} ||
-| 11| 29 Aug| [Gradient Descent](https://nipunbatra.github.io/ml-teaching/optimization/slides/gradient-descent-handout.pdf){target="_blank"} | [Taylor's series](https://nipunbatra.github.io/ml-teaching/notebooks/taylor.html){target="_blank"}, [Contours & Gradient Descent](https://nipunbatra.github.io/ml-teaching/notebooks/contour.html){target="_blank"} ||
-| 12| 3 Sep| [Movie recommendation & Matrix Factorization](https://nipunbatra.github.io/ml-teaching/supervised/slides/movie-recommendation.pdf){target="_blank"} | [Movie Recommendation](https://nipunbatra.github.io/ml-teaching/notebooks/movie-recommendation-knn-mf.html){target="_blank"} ||
-| 13| 10 Sep| [Ridge Regression](https://nipunbatra.github.io/ml-teaching/supervised/slides/ridge-regression-handout.pdf){target="_blank"} | [Ridge Regression](https://nipunbatra.github.io/ml-teaching/notebooks/ridge.html){target="_blank"} ||
-| 14| 11 Sep| [Lasso Regression](https://nipunbatra.github.io/ml-teaching/supervised/slides/lasso-regression-handout.pdf){target="_blank"} | [Lasso Regression](https://nipunbatra.github.io/ml-teaching/notebooks/lasso-regression.html){target="_blank"} ||
-| 15| 12 Sep| [Constrained Optimization](https://nipunbatra.github.io/ml2022/lectures/ml-maths-3.pdf){target="_blank"} |||
-| 16| 17 Sep| [Logistic Regression 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/logistic-regression-handout.pdf){target="_blank"} | [Why use logits](https://nipunbatra.github.io/ml-teaching/notebooks/logits-usage.html){target="_blank"}, [Logistic regression in Torch](https://nipunbatra.github.io/ml-teaching/notebooks/logistic-regression-torch.html){target="_blank"} ||
-| 17| 8 Oct| [Logistic Regression 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/logistic-regression-handout.pdf){target="_blank"} | [Why use logits](https://nipunbatra.github.io/ml-teaching/notebooks/logits-usage.html){target="_blank"}, [Logistic regression in Torch](https://nipunbatra.github.io/ml-teaching/notebooks/logistic-regression-torch.html){target="_blank"} ||
-| 18| 9 Oct| [Tutorial on Convexity, Hessian, IRLS](https://nipunbatra.github.io/ml-teaching/optimization/slides/convexity-hessian-irls.pdf){target="_blank"} | [Notebook on 2nd Order Logistic Regression](https://nipunbatra.github.io/ml-teaching/notebooks/logistic-torch-second-order.html){target="_blank"} ||
-| 19| 10 Oct| [Precision-Recall Curves](https://nipunbatra.github.io/ml-teaching/supervised/slides/pr-curve.pdf){target="_blank"} | [Notebook on PR Curves](https://nipunbatra.github.io/ml-teaching/notebooks/pr-curve.html){target="_blank"} ||
-| 20| 15 Oct| [Multi-Layer Perceptrons](https://nipunbatra.github.io/ml-teaching/neural-networks/slides/mlp.pdf){target="_blank"} | [Perceptron learning algorithm](https://nipunbatra.github.io/ml-teaching/notebooks/perceptron-learning.html){target="_blank"} ||
-| 21| 16 Oct| [Automatic Differentiation](https://nipunbatra.github.io/ml-teaching/neural-networks/slides/autograd.pdf){target="_blank"} | [Notebook on Autodiff](https://nipunbatra.github.io/ml-teaching/notebooks/autodiff.html){target="_blank"} ||
-| 22| 17 Oct|| [Autograd from scratch](https://nipunbatra.github.io/ml-teaching/notebooks/autograd-from-scratch.html){target="_blank"} ||
-| 23| 22 Oct| [Next Token Prediction](https://nipunbatra.github.io/ml-teaching/neural-networks/slides/next-token-prediction.pdf){target="_blank"}| [Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/names.html){target="_blank"}, [Streamlit App](https://gpt-demo.streamlit.app/){target="_blank"}||
-| 24| 23 Oct| [CNN - I](https://nipunbatra.github.io/ml-teaching/neural-networks/slides/cnn-1d.pdf){target="_blank"} | [Notebook 1](https://nipunbatra.github.io/ml-teaching/notebooks/1d-cnn.html){target="_blank"}, [Notebook 2 on edge detection](https://nipunbatra.github.io/ml-teaching/notebooks/cnn-edge.html){target="_blank"}, [Notebook 3 on LeNet](https://nipunbatra.github.io/ml-teaching/notebooks/cnn.html){target="_blank"}||
+| Lecture # |    Date     | Topic (Slides) | Notebooks |
+|:---:|:------------:|:-------|:------------------------------------------:|
+|     0     | 25 Jul| [Pre-requisite quiz released](exams/prereq.qmd){target="_blank"} |           |
+|     1     |    6 Aug    | [Introduction and Logistics](https://nipunbatra.github.io/ml-teaching/basics/slides/1-introduction-ml-2025.pdf){target="_blank"}                     |      [Transcription and local LLMs](https://nipunbatra.github.io/ml-teaching/notebooks/transcript.html){target="_blank"}, [Segmentation and Localization](https://nipunbatra.github.io/ml-teaching/notebooks/object-detection-segmentation.html){target="_blank"}, [Prompt to Image](https://nipunbatra.github.io/ml-teaching/notebooks/text_to_image.html){target="_blank"}     |
+| 2| 7 Aug| [Convention, Metrics, Classification, Regression](https://nipunbatra.github.io/ml-teaching/basics/slides/accuracy-convention-handout.pdf){target="_blank"}|[Rule based vs ML](https://nipunbatra.github.io/ml-teaching/notebooks/rule-based-vs-ml.html){target="_blank"}, [Confusion Matrix](https://nipunbatra.github.io/ml-teaching/notebooks/confusion-mnist.html){target="_blank"}, [Dummy baselines](https://nipunbatra.github.io/ml-teaching/notebooks/dummy-baselines.html){target="_blank"}|
+| 3| 8 Aug| [Decision Trees 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-trees-handout.pdf){target="_blank"}|[Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/entropy.html){target="_blank"}, [Decision Trees Real Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-output.html){target="_blank"}, [DT Real Input Discrete Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-discrete-output.html){target="_blank"}|
+| 4| 13 Aug| [Decision Trees 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-trees-handout.pdf){target="_blank"}|[Decision Trees + Overfitting, Underfitting](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-real-output.html){target="_blank"}|
+| 5| 14 Aug| [Bias-Variance Trade-off 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/bias-variance.pdf){target="_blank"}, [Cross-Validation](https://nipunbatra.github.io/ml-teaching/supervised/slides/cross-validation-handout.pdf){target="_blank"}|[Tuning Hyperparameters](https://nipunbatra.github.io/ml-teaching/notebooks/hyperparams-experiments.html){target="_blank"}, [Bias-Variance Analysis](https://nipunbatra.github.io/ml-teaching/notebooks/bias-variance.html){target="_blank"}, [Bias-Variance Charts](https://nipunbatra.github.io/ml-teaching/notebooks/bias-variance-charts.html){target="_blank"}|
+| 6| 20 Aug| [Ensemble Learning](https://nipunbatra.github.io/ml-teaching/supervised/slides/ensemble-handout.pdf){target="_blank"} | [Boosting Explanation](https://nipunbatra.github.io/ml-teaching/notebooks/boosting-explanation.html){target="_blank"}, [Ensemble Feature Importance](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-feature-importance.html){target="_blank"}, [Ensemble Representation](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-representation.html){target="_blank"} |
+| 7| 21 Aug| [Decision Tree Pruning](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-tree-pruning-handout.pdf){target="_blank"}, [Bias-Variance Trade-off 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/bias-variance-2.pdf){target="_blank"} | [Decision Tree Pruning Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/dt-pruning.html){target="_blank"} |
+| 8| 22 Aug| [Maths for ML](https://nipunbatra.github.io/ml-teaching/maths/slides/mathematical-ml-handout.pdf){target="_blank"}, [Contours & Gradients](https://nipunbatra.github.io/ml-teaching/maths/slides/ml-maths-2-contour-handout.pdf){target="_blank"}, [Decision Tree Time Complexity](https://nipunbatra.github.io/ml-teaching/maths/slides/decision-tree-complexity-handout.pdf){target="_blank"}|[Contour Plots](https://nipunbatra.github.io/ml-teaching/notebooks/contour.html){target="_blank"},[Meshgrid & Contours](https://nipunbatra.github.io/ml-teaching/notebooks/meshgrid.html)|
+| 9| 27 Aug| [Linear Regression 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/linear-regression-handout.pdf){target="_blank"} | [Decision Tree Pruning Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/dt-pruning.html){target="_blank"} |
+| 10| 28 Aug| [Linear Regression 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/linear-regression-handout.pdf){target="_blank"} | [Geometric Linear Regression](https://nipunbatra.github.io/ml-teaching/notebooks/geometric-linear-regression.html){target="_blank"},[Basis Expansion](https://nipunbatra.github.io/ml-teaching/notebooks/basis.html){target="_blank"},[Basis Expansion 2](https://nipunbatra.github.io/ml-teaching/notebooks/basis2.html){target="_blank"}, [Dummy Variables](https://nipunbatra.github.io/ml-teaching/notebooks/dummy-variables-multi-colinearity.html){target="_blank"} |
+| 11| 29 Aug| [Gradient Descent](https://nipunbatra.github.io/ml-teaching/optimization/slides/gradient-descent-handout.pdf){target="_blank"} | [Taylor's series](https://nipunbatra.github.io/ml-teaching/notebooks/taylor.html){target="_blank"}, [Contours & Gradient Descent](https://nipunbatra.github.io/ml-teaching/notebooks/contour.html){target="_blank"} |
+| 12| 3 Sep| [Movie recommendation & Matrix Factorization](https://nipunbatra.github.io/ml-teaching/supervised/slides/movie-recommendation.pdf){target="_blank"} | [Movie Recommendation](https://nipunbatra.github.io/ml-teaching/notebooks/movie-recommendation-knn-mf.html){target="_blank"} |
+| 13| 10 Sep| [Ridge Regression](https://nipunbatra.github.io/ml-teaching/supervised/slides/ridge-regression-handout.pdf){target="_blank"} | [Ridge Regression](https://nipunbatra.github.io/ml-teaching/notebooks/ridge.html){target="_blank"} |
+| 14| 11 Sep| [Lasso Regression](https://nipunbatra.github.io/ml-teaching/supervised/slides/lasso-regression-handout.pdf){target="_blank"} | [Lasso Regression](https://nipunbatra.github.io/ml-teaching/notebooks/lasso-regression.html){target="_blank"} |
+| 15| 12 Sep| [Constrained Optimization](https://nipunbatra.github.io/ml2022/lectures/ml-maths-3.pdf){target="_blank"} |
+| 16| 17 Sep| [Logistic Regression 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/logistic-regression-handout.pdf){target="_blank"} | [Why use logits](https://nipunbatra.github.io/ml-teaching/notebooks/logits-usage.html){target="_blank"}, [Logistic regression in Torch](https://nipunbatra.github.io/ml-teaching/notebooks/logistic-regression-torch.html){target="_blank"} |
+| 17| 8 Oct| [Logistic Regression 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/logistic-regression-handout.pdf){target="_blank"} | [Why use logits](https://nipunbatra.github.io/ml-teaching/notebooks/logits-usage.html){target="_blank"}, [Logistic regression in Torch](https://nipunbatra.github.io/ml-teaching/notebooks/logistic-regression-torch.html){target="_blank"} |
+| 18| 9 Oct| [Tutorial on Convexity, Hessian, IRLS](https://nipunbatra.github.io/ml-teaching/optimization/slides/convexity-hessian-irls.pdf){target="_blank"} | [Notebook on 2nd Order Logistic Regression](https://nipunbatra.github.io/ml-teaching/notebooks/logistic-torch-second-order.html){target="_blank"} |
+| 19| 10 Oct| [Precision-Recall Curves](https://nipunbatra.github.io/ml-teaching/supervised/slides/pr-curve.pdf){target="_blank"} | [Notebook on PR Curves](https://nipunbatra.github.io/ml-teaching/notebooks/pr-curve.html){target="_blank"} |
+| 20| 15 Oct| [Multi-Layer Perceptrons](https://nipunbatra.github.io/ml-teaching/neural-networks/slides/mlp.pdf){target="_blank"} | [Perceptron learning algorithm](https://nipunbatra.github.io/ml-teaching/notebooks/perceptron-learning.html){target="_blank"} |
+| 21| 16 Oct| [Automatic Differentiation](https://nipunbatra.github.io/ml-teaching/neural-networks/slides/autograd.pdf){target="_blank"} | [Notebook on Autodiff](https://nipunbatra.github.io/ml-teaching/notebooks/autodiff.html){target="_blank"} |
+| 22| 17 Oct|| [Autograd from scratch](https://nipunbatra.github.io/ml-teaching/notebooks/autograd-from-scratch.html){target="_blank"} |
+| 23| 22 Oct| [Next Token Prediction](https://nipunbatra.github.io/ml-teaching/neural-networks/slides/next-token-prediction.pdf){target="_blank"}| [Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/names.html){target="_blank"}, [Streamlit App](https://gpt-demo.streamlit.app/){target="_blank"}|
+| 24| 23 Oct| [CNN - I](https://nipunbatra.github.io/ml-teaching/neural-networks/slides/cnn-1d.pdf){target="_blank"} | [Notebook 1](https://nipunbatra.github.io/ml-teaching/notebooks/1d-cnn.html){target="_blank"}, [Notebook 2 on edge detection](https://nipunbatra.github.io/ml-teaching/notebooks/cnn-edge.html){target="_blank"}, [Notebook 3 on LeNet](https://nipunbatra.github.io/ml-teaching/notebooks/cnn.html){target="_blank"}, Streamlit Apps: [Convolution](https://convolution-viz.streamlit.app/){target="_blank"}, [Convolution Multi-Channel](https://convolution-viz-multi-channel.streamlit.app/){target="_blank"}|
+| 25| 24 Oct| [Gradcam, Equivariance and Invariance](https://www.doc.ic.ac.uk/~bkainz/teaching/DL/notes/equivariance.pdf){target="_blank"} | Streamlit Apps: [Gradcam](https://gradcam-demo.streamlit.app/){target="_blank"}, [Gradcam Enhanced](https://gradcam-enhanced.streamlit.app/){target="_blank"}|
+| 26| 24 Oct| HuggingFace Spaces: [DINOv3 Visual Fashion Search](https://huggingface.co/spaces/NeerjaK/dinov3-visual-fashion-search){target="_blank"}, [DINOv3 Patch Similarity Visualizer](https://huggingface.co/spaces/NeerjaK/DinoV3-Patch-Similarity-Visualiser){target="_blank"} | [Classification using DINOv3 Notebook](){target="_blank"}, [Regression using DINOv3 Notebook](){target="_blank"}, [DINOv3 Data](https://drive.google.com/drive/u/1/folders/1oISTKsa0JCn5pnmlFwiRZVKp93TQYPxC){target="_blank"} |
+| 27| 29 Oct| [Unsupervised Learning - Clustering](https://nipunbatra.github.io/ml-teaching/unsupervised/slides/clustering-lecture.pdf){target="_blank"} | Streamlit Apps: [Simple Image Clustering](https://simple-image-clustering.streamlit.app/){target="_blank"}, [Image Clustering Demo](https://image-clustering-demo.streamlit.app/){target="_blank"}, [Document Clustering](https://document-clustering-demo.streamlit.app/){target="_blank"} |
+| 28| 30 Oct| [PCA Tutorial](){target="_blank"} | [Notebook](){target="_blank"} |
+| 29| 31 Oct| [Reinforcement learning](https://nipunbatra.github.io/ml-teaching/reinforcement-learning/slides/rl.pdf){target="_blank"}|[Streamlit App](){target="_blank"} |
 
-
+---
 
 | Quiz # |    Date     | Solution PDF                                  |
 |:--:|:--:|:-----|
@@ -49,6 +54,7 @@ title: "Schedule"
 | 2  | 25 Sep | [Quiz 2 Solution](quizzes/ml_2025_q2_TA.pdf){target="_blank"}|
 | 3  | 24 Oct  | [Quiz 3 Solution](quizzes/ml_2025_quiz3_TA.pdf){target="_blank"}|
 
+---
 
 | Assignment # |    Handout Date     | Submission Deadline | Assignment Link |
 |:--:|:--:|:--:|:-----|
