pca notebook links added

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -45,7 +45,7 @@ title: "Schedule"
 | 25| 24 Oct| [Gradcam, Equivariance and Invariance](https://www.doc.ic.ac.uk/~bkainz/teaching/DL/notes/equivariance.pdf){target="_blank"} | Streamlit Apps: [Gradcam](https://gradcam-demo.streamlit.app/){target="_blank"}, [Gradcam Enhanced](https://gradcam-enhanced.streamlit.app/){target="_blank"}|
 | 26| 24 Oct| HF Spaces: [DINOv3 Visual Fashion Search](https://huggingface.co/spaces/NeerjaK/dinov3-visual-fashion-search){target="_blank"}, [DINOv3 Patch Similarity Visualizer](https://huggingface.co/spaces/NeerjaK/DinoV3-Patch-Similarity-Visualiser){target="_blank"} | [Classification using DINOv3 Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/dinov3-classification.html){target="_blank"}, [Regression using DINOv3 Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/dinov3-regression.html){target="_blank"}, [DINOv3 Data](https://drive.google.com/drive/u/1/folders/1oISTKsa0JCn5pnmlFwiRZVKp93TQYPxC){target="_blank"} |
 | 27| 29 Oct| [Unsupervised Learning - Clustering](https://nipunbatra.github.io/ml-teaching/unsupervised/slides/clustering-lecture.pdf){target="_blank"} | Streamlit Apps: [Simple Image Clustering](https://simple-image-clustering.streamlit.app/){target="_blank"}, [Image Clustering Demo](https://image-clustering-demo.streamlit.app/){target="_blank"}, [Document Clustering](https://document-clustering-demo.streamlit.app/){target="_blank"} |
-| 28| 30 Oct| [PCA Tutorial](https://nipunbatra.github.io/ml-teaching/unsupervised/slides/pca.pdf){target="_blank"} | [Notebook](https://colab.research.google.com/drive/1cSOn7kbuFTp8esuAy18XEU5o2YTwt40c#scrollTo=lb2QT2brrTfh){target="_blank"} |
+| 28| 30 Oct| [PCA Tutorial](https://nipunbatra.github.io/ml-teaching/unsupervised/slides/pca.pdf){target="_blank"} | [Notebook 1](https://nipunbatra.github.io/ml-teaching/notebooks/pca-tutorial-1.html){target="_blank"}, [Notebook 2](https://nipunbatra.github.io/ml-teaching/notebooks/pca-tutorial-2.html){target="_blank"} |
 | 29| 31 Oct| [Reinforcement learning](https://nipunbatra.github.io/ml-teaching/advanced/slides/rl.pdf){target="_blank"}|Streamlit Apps: [Flappy Bird Demo](https://github.com/nipunbatra/ml-teaching/tree/master/apps/flappy-rl-demo){target="_blank"}, [RL Demo](https://github.com/nipunbatra/ml-teaching/tree/master/apps/rl-demo){target="_blank"}, [RL Exploration](https://github.com/nipunbatra/ml-teaching/tree/master/apps/rl-exploration){target="_blank"} |
 
 ---
