Added slides for november

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -47,6 +47,10 @@ title: "Schedule"
 | 27| 29 Oct| [Unsupervised Learning - Clustering](https://nipunbatra.github.io/ml-teaching/unsupervised/slides/clustering-lecture.pdf){target="_blank"} | Streamlit Apps: [Simple Image Clustering](https://simple-image-clustering.streamlit.app/){target="_blank"}, [Image Clustering Demo](https://image-clustering-demo.streamlit.app/){target="_blank"}, [Document Clustering](https://document-clustering-demo.streamlit.app/){target="_blank"} |
 | 28| 30 Oct| [PCA Tutorial](https://nipunbatra.github.io/ml-teaching/unsupervised/slides/pca.pdf){target="_blank"} | [Notebook 1](https://nipunbatra.github.io/ml-teaching/notebooks/pca-tutorial-1.html){target="_blank"}, [Notebook 2](https://nipunbatra.github.io/ml-teaching/notebooks/pca-tutorial-2.html){target="_blank"} |
 | 29| 31 Oct| [Reinforcement learning](https://nipunbatra.github.io/ml-teaching/advanced/slides/rl.pdf){target="_blank"}|Streamlit Apps: [Flappy Bird Demo](https://github.com/nipunbatra/ml-teaching/tree/master/apps/flappy-rl-demo){target="_blank"}, [RL Demo](https://github.com/nipunbatra/ml-teaching/tree/master/apps/rl-demo){target="_blank"}, [RL Exploration](https://github.com/nipunbatra/ml-teaching/tree/master/apps/rl-exploration){target="_blank"} |
+| 30| 6 Nov | [KNN](https://nipunbatra.github.io/ml-teaching/supervised/slides/knn.pdf){target="_blank"}, [KNN Approximation](https://nipunbatra.github.io/ml-teaching/supervised/slides/knn-approx.pdf){target="_blank"} | [Curse of Dimensionality](https://nipunbatra.github.io/ml-teaching/notebooks/curse-dimensionality.html){target="_blank"} |
+| 31| 12 Nov | [SVM](https://nipunbatra.github.io/ml2023/lectures/svm-intro.pdf){target="_blank"} | [Notebook 1](https://nipunbatra.github.io/ml-teaching/notebooks/svm.html){target="_blank"}, [Notebook 2](https://nipunbatra.github.io/ml-teaching/notebooks/svm-cvxopt.html){target="_blank"} |
+| 32| 13 Nov | [SVM Kernel](https://nipunbatra.github.io/ml2023/lectures/svm-intro.pdf){target="_blank"} | [Notebook 1](https://nipunbatra.github.io/ml-teaching/notebooks/svm-kernel-understanding.html){target="_blank"}, [Notebook 2](https://nipunbatra.github.io/ml-teaching/notebooks/svm-kernel.html){target="_blank"}, [Notebook 3](https://nipunbatra.github.io/ml-teaching/notebooks/svm-primal-dual.html){target="_blank"} |
+| 33| 14 Nov | [SVM soft margin](https://nipunbatra.github.io/ml2023/lectures/svm-soft-margin.pdf){target="_blank"} | [Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/svm-soft-margin.html){target="_blank"} | 
 
 ---
 
